<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddEditTransactionActivity"
    android:background="@color/background">

    <!-- Navigation Bar -->
    <LinearLayout
        android:id="@+id/layoutTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="Back"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/txtScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="Edit transaction"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Transaction List RecyclerView -->
    <ScrollView
        android:id="@+id/scrollForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTopBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/dividerVertical"
            android:dividerPadding="8dp"
            android:orientation="vertical"
            android:showDividers="middle">

            <!-- Transaction Name -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Transaction name"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/text_muted"
                        android:layout_marginBottom="8dp" />

                    <EditText
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter name"
                        android:background="@android:color/transparent"
                        android:inputType="text" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Amount -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Amount"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/text_muted"
                        android:layout_marginBottom="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:text="$"
                            android:textSize="30sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:textStyle="bold"
                            android:layout_marginEnd="8dp"/>

                        <EditText
                            android:id="@+id/txtAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="0.00"
                            android:inputType="numberDecimal"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            android:background="@android:color/transparent"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Transaction Type -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardTransactionType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Transaction type"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/text_muted"
                        android:layout_marginBottom="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:weightSum="2">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnIncome"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Income"
                            android:textAllCaps="false"
                            android:paddingLeft="20dp"
                            android:drawableStart="@drawable/ic_arrow_down"
                            android:textColor="@color/green"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/bg_button_income" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnExpense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:text="Expense"
                            android:textAllCaps="false"
                            android:drawableStart="@drawable/ic_arrow_up"
                            android:textColor="@color/gray"
                            android:background="@drawable/bg_button_transaction_default" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Date -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Date"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/text_muted"
                        android:layout_marginBottom="8dp" />

                    <LinearLayout
                        android:id="@+id/btnDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView
                            android:id="@+id/txtDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="2025-03-15"
                            android:textSize="16sp" />

                        <ImageView
                            android:src="@drawable/ic_calendar"
                            android:layout_width="24dp"
                            android:layout_height="24dp"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Category -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Category"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/text_muted"
                        android:layout_marginBottom="8dp" />

                    <Spinner
                        android:id="@+id/spinnerCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:spinnerMode="dropdown" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </ScrollView>

    <!-- Action Buttons -->
    <LinearLayout
        android:id="@+id/layoutActionBar"
        android:elevation="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="12dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel"
            app:cornerRadius="12dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="18sp"
            android:textColor="@color/default_button_text"
            android:backgroundTint="@color/default_button_bg"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cornerRadius="12dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="Add"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/blue"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
